--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
-		<title>Assignment 2</title>
-		<meta charset="utf-8" />
-		<link rel="stylesheet" href="/static/css/style.css" />
+		<meta charset="UTF-8">
+		<link rel="stylesheet" href="/static/css/skeleton.css">
+		<link rel="stylesheet" href="/static/css/style.css">
+		<title>Blogspot-Homepage</title>
 	</head>
 	<body>
-		<h1>Hello World</h1>
-
-		<script src="/static/js/script.js"></script>
-
+		<h1>Blogspot: A place to say your mind</h1>
+		<h3 id="p007">List of Blogs:</h3> <!-- This element is affected by cascading styles in style.css. This is also affected by an id type style -->
+		<ul>
+			<li><a href="/8_Experiments_in_Motivation">8 Experiments in Motivation</a></li>
+			<li><a href="/A_Mindful_Shift_of_Focus">A Mindful Shift of Focus</a></li>
+			<li><a href="/How_to_Develop_an_Awesome_Sense_of_Direction">How to Develop an Awesome Sense of Direction</a></li>
+			<li><a href="/Training_to_Be_a_Good_Writer">Training to Be a Good Writer</a></li>
+			<li><a href="/What_Productivity_Systems_Wont_Solve">What Productivity Systems Won't Solve</a></li>
+		</ul>
+		<footer></footer>
 	</body>
-</html>		
+</html>
